tests/fsharp/typecheck/sigs/neg29.bsl

neg29.fs(6,9,6,10): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (5:12). Try indenting this token further or using standard formatting conventions.

neg29.fs(6,9,6,10): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (5:12). Try indenting this token further or using standard formatting conventions.

neg29.fs(10,7,10,8): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (9:16). Try indenting this token further or using standard formatting conventions.

neg29.fs(10,7,10,8): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (9:16). Try indenting this token further or using standard formatting conventions.

neg29.fs(14,6,14,7): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (13:16). Try indenting this token further or using standard formatting conventions.

neg29.fs(14,6,14,7): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (13:16). Try indenting this token further or using standard formatting conventions.

neg29.fs(18,5,18,6): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (17:16). Try indenting this token further or using standard formatting conventions.

neg29.fs(18,5,18,6): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (17:16). Try indenting this token further or using standard formatting conventions.

neg29.fs(21,19,22,16): parse error FS0010: Incomplete structured construct at or before this point in type name. Expected '>' or other token.

neg29.fs(25,1,25,1): parse error FS0010: Incomplete structured construct at or before this point in implementation file
